# matrix-llmagent

./: .gitignore  AGENTS.md  PLAN.md  README.md  analyze_classifier.py  analyze_proactive.py  config.json.example  get_token.py  pyproject.toml
docs/: E2EE_SUPPORT.md  KNOWLEDGE_BASE.md  LIBRARY_CLIENT_FEATURES.md  LIBRARY_TOUR.md
matrix_llmagent/: __init__.py  history.py  invite_manager.py  main.py  matrix_client.py  matrix_monitor.py  room_bouncer.py
matrix_llmagent/agentic_actor/: actor.py  library_tool.py  tools.py
matrix_llmagent/chronicler/: quests.py
matrix_llmagent/mcp_client/: __init__.py  client.py
matrix_llmagent/providers/: __init__.py  anthropic.py  llamacpp.py  openai.py  perplexity.py
tests/: conftest.py  test_history.py  test_main.py  test_rate_limiter.py
tests/agentic_actor/: test_actor.py  test_library_tool.py  test_progress.py  test_tools.py
tests/chronicler/: test_chapters.py  test_chronicle.py  test_quests.py  test_tools.py
tests/conversations/: kb_sources_flow.json  library_browsing_flow.json  mixed_sources_flow.json  no_tool_sources_flow.json  search_news_flow.json  source_cache_comprehensive.json  source_detail_comparison.json  sources_command.json
tests/mcp_client/: __init__.py  test_client.py
tests/providers/: test_anthropic.py  test_llamacpp.py  test_openai.py  test_unsafe_fallback.py
tests/rooms/: test_proactive.py
tests/rooms/irc/: test_autochronicler.py  test_monitor.py  test_varlink.py
